--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/playfair-display": "^5.0.2",
+    "@fontsource-variable/plus-jakarta-sans": "^5.0.2",
+    "aos": "^2.3.4",
     "astro": "^2.4.1"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
